--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/images/icons/resume.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="A simple and minimalistic resumé template." />
-        <meta name="author" content="Ryan Balieiro" />
-        <title>Resume Template - Vue 3 + Bootstrap 5</title>
+        <meta name="description" content="Yahor Zhylinski CV" />
+        <meta name="author" content="Yahor Zhylinski" />
+        <title>Yahor Zhylinski CV</title>
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Saira:400,700" rel="stylesheet" type="text/css">
